--- a/src/sass/partials/_triangles.scss
+++ b/src/sass/partials/_triangles.scss
@@ -195,3 +195,8 @@ polygon(55.85% 37.57%, 51.38% 35.55%, 55.53% 39.23% );
         transition: all .3s cubic-bezier(0.785, 0.135, 0.15, 0.86);
     }
 }
+.triangles{
+    border: 1px solid blueviolet;
+    width: 800px;
+    height: 600px;
+}
