add back step paint

--- a/src/templates/paint.html
+++ b/src/templates/paint.html
@@ -12,6 +12,7 @@ title: Paint page
       <button class="btn btn_space" id="clear">Clear</button>
       <button class="btn btn_space" id="save">Save</button>
       <button class="btn btn_space" id="replay">Replay</button>
+      <button class="btn btn_space" id="back">Back</button>
       <div class="input-block">
         <div class="input-block__label">
           Line width
