--- a/src/templates/whiteweb.html
+++ b/src/templates/whiteweb.html
@@ -7,16 +7,16 @@ bodyMod: is-cursor
 {% block content %}
 
 <canvas id="cursor"></canvas>
-<div class="whiteweb">
-  <div class="waves" id="waves">
-    <div class="waves__img">
-      <!--<img src="img/1.jpg" alt=""/>-->
-      <div class="js-image" data-src="img/1.jpg" style="width: 600px; height: 600px;"></div>
-    </div>
-  </div>
-  <div class="twist" data-src="img/3.jpg" style="width: 600px; height: 600px;"></div>
-  <div class="logo" data-src="img/2.jpg" style="width: 300px; height: 300px;"></div>
-</div>
+<!--<div class="whiteweb">-->
+  <!--<div class="waves" id="waves">-->
+    <!--<div class="waves__img">-->
+      <!--&lt;!&ndash;<img src="img/1.jpg" alt=""/>&ndash;&gt;-->
+      <!--<div class="js-image" data-src="img/1.jpg" style="width: 600px; height: 600px;"></div>-->
+    <!--</div>-->
+  <!--</div>-->
+  <!--<div class="twist" data-src="img/3.jpg" style="width: 600px; height: 600px;"></div>-->
+  <!--<div class="logo" data-src="img/2.jpg" style="width: 300px; height: 300px;"></div>-->
+<!--</div>-->
 
 
 
