--- a/src/sass/partials/_whiteweb.sass
+++ b/src/sass/partials/_whiteweb.sass
@@ -16,3 +16,10 @@
 	display: flex
 	justify-content: space-between
 	flex-wrap: wrap
+//.logo
+	&__img
+
+	img
+		max-width: 300px
+		//transform: translate3d(2px, 2px, 2px)
+		transform: skew(-0.06turn, 18deg)
