upd cursor, upd waves

--- a/src/sass/partials/_whiteweb.sass
+++ b/src/sass/partials/_whiteweb.sass
@@ -1,4 +1,4 @@
-//#cursor
+#cursor
 	position: absolute
 	top: 0
 	left: 0
@@ -8,7 +8,7 @@
 	display: flex
 	//justify-content: space-between
 	//align-items: flex-start
-	&__img
+	//&__img
 		max-width: 50%
 		img
 			max-width: 100%
@@ -16,6 +16,8 @@
 	display: flex
 	justify-content: space-between
 	flex-wrap: wrap
+	img
+		max-width: 100%
 //.logo
 	&__img
 
@@ -23,3 +25,11 @@
 		max-width: 300px
 		//transform: translate3d(2px, 2px, 2px)
 		transform: skew(-0.06turn, 18deg)
+
+.wrapper
+	width: 100%
+	padding: 10px
+
+.some-block
+	padding: 20px
+	background-color: grey
