--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,7 @@
 // done by riverco.de
 @import helpers/all
 @import generated/sprite-svg
+@import lib/swiper
 @import common
 @import layouts
 @import main
